src/objects/AuditGroup__c.object
<CustomObject>
    <customHelpPage>AuditGroupCsh</customHelpPage>
    <fields>
        <fullName>AuditInitializerConfig__c</fullName>
        <inlineHelpText>What record configures the AuditInitializer Step that the message was passing through?</inlineHelpText>
        <label>Audit Config</label>
        <referenceTo>AuditInitializerConfig__c</referenceTo>
        <relationshipLabel>Audit Groups</relationshipLabel>
        <relationshipName>AuditGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Audit Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GroupIdentifier__c</columns>
        <columns>Stamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>